@@ -4,6 +4,8 @@
    - Automatic interface selection wasn't done for --traffic and --live when
      the Interface configuration setting was left empty
    - --setalias didn't do anything when used in combination with --add
+   - -l / --live and -tr default to first interface instead of producing an
+     error if a interface merge is requested
 
 
 2.4 / 18-Aug-2019
